73までやった

--- a/docker/work/preprocess_knock_SQL.ipynb
+++ b/docker/work/preprocess_knock_SQL.ipynb
@@ -34,16 +34,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There's a new jupysql version available (0.10.12), you're running 0.7.2. To upgrade: pip install jupysql --upgrade\n",
-      "Deploy Dash apps for free on Ploomber Cloud! Learn more: https://ploomber.io/s/signup\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "import os\n",
@@ -8947,7 +8938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -9047,19 +9038,22 @@
        " ('CS027514000015', 20191010, '20151101', datetime.timedelta(days=1439))]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "SELECT r.customer_id, r.sales_ymd, c.application_date, TO_TIMESTAMP(CAST(r.sales_ymd AS VARCHAR), 'YYYYMMDD') - TO_TIMESTAMP(c.application_date, 'YYYYMMDD')\n",
+    "SELECT\n",
+    "    r.customer_id,\n",
+    "    r.sales_ymd,\n",
+    "    c.application_date,\n",
+    "    TO_TIMESTAMP(CAST(r.sales_ymd AS VARCHAR), 'YYYYMMDD') - TO_TIMESTAMP(c.application_date, 'YYYYMMDD')\n",
     "FROM receipt AS r\n",
     "LEFT OUTER JOIN\n",
     "    customer AS c\n",
     "        ON r.customer_id = c.customer_id\n",
-    "\n",
     "LIMIT 10;"
    ]
   },
@@ -9073,11 +9067,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "10 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>customer_id</th>\n",
+       "            <th>sales_ymd</th>\n",
+       "            <th>application_date</th>\n",
+       "            <th>months</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>CS006214000001</td>\n",
+       "            <td>20181103</td>\n",
+       "            <td>20150201</td>\n",
+       "            <td>45</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS008415000097</td>\n",
+       "            <td>20181118</td>\n",
+       "            <td>20150322</td>\n",
+       "            <td>44</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS028414000014</td>\n",
+       "            <td>20170712</td>\n",
+       "            <td>20150711</td>\n",
+       "            <td>24</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>ZZ000000000000</td>\n",
+       "            <td>20190205</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS025415000050</td>\n",
+       "            <td>20180821</td>\n",
+       "            <td>20160131</td>\n",
+       "            <td>31</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS003515000195</td>\n",
+       "            <td>20190605</td>\n",
+       "            <td>20150306</td>\n",
+       "            <td>51</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS024514000042</td>\n",
+       "            <td>20181205</td>\n",
+       "            <td>20151010</td>\n",
+       "            <td>38</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS040415000178</td>\n",
+       "            <td>20190922</td>\n",
+       "            <td>20150627</td>\n",
+       "            <td>51</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>ZZ000000000000</td>\n",
+       "            <td>20170504</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS027514000015</td>\n",
+       "            <td>20191010</td>\n",
+       "            <td>20151101</td>\n",
+       "            <td>47</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('CS006214000001', 20181103, '20150201', Decimal('45')),\n",
+       " ('CS008415000097', 20181118, '20150322', Decimal('44')),\n",
+       " ('CS028414000014', 20170712, '20150711', Decimal('24')),\n",
+       " ('ZZ000000000000', 20190205, None, None),\n",
+       " ('CS025415000050', 20180821, '20160131', Decimal('31')),\n",
+       " ('CS003515000195', 20190605, '20150306', Decimal('51')),\n",
+       " ('CS024514000042', 20181205, '20151010', Decimal('38')),\n",
+       " ('CS040415000178', 20190922, '20150627', Decimal('51')),\n",
+       " ('ZZ000000000000', 20170504, None, None),\n",
+       " ('CS027514000015', 20191010, '20151101', Decimal('47'))]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "\n",
+    "-- postgresql には interval という概念がある\n",
+    "-- https://www.postgresql.org/docs/current/functions-datetime.html\n",
+    "WITH receipt_with_spend AS (\n",
+    "    SELECT\n",
+    "        r.customer_id,\n",
+    "        r.sales_ymd,\n",
+    "        c.application_date,\n",
+    "        justify_days(\n",
+    "            TO_TIMESTAMP(CAST(r.sales_ymd AS VARCHAR), 'YYYYMMDD') - TO_TIMESTAMP(c.application_date, 'YYYYMMDD')\n",
+    "        ) AS diff\n",
+    "    FROM receipt AS r\n",
+    "    LEFT OUTER JOIN\n",
+    "        customer AS c\n",
+    "            ON r.customer_id = c.customer_id\n",
+    ")\n",
+    "SELECT\n",
+    "    r.customer_id,\n",
+    "    r.sales_ymd,\n",
+    "    r.application_date,\n",
+    "    EXTRACT(month FROM r.diff) + EXTRACT(YEAR FROM r.diff) * 12 AS months\n",
+    "FROM receipt_with_spend AS r\n",
+    "LIMIT 10;"
    ]
   },
   {
@@ -9090,11 +9209,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "10 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>customer_id</th>\n",
+       "            <th>sales_ymd</th>\n",
+       "            <th>application_date</th>\n",
+       "            <th>years</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>CS006214000001</td>\n",
+       "            <td>20181103</td>\n",
+       "            <td>20150201</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS008415000097</td>\n",
+       "            <td>20181118</td>\n",
+       "            <td>20150322</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS028414000014</td>\n",
+       "            <td>20170712</td>\n",
+       "            <td>20150711</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>ZZ000000000000</td>\n",
+       "            <td>20190205</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS025415000050</td>\n",
+       "            <td>20180821</td>\n",
+       "            <td>20160131</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS003515000195</td>\n",
+       "            <td>20190605</td>\n",
+       "            <td>20150306</td>\n",
+       "            <td>4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS024514000042</td>\n",
+       "            <td>20181205</td>\n",
+       "            <td>20151010</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS040415000178</td>\n",
+       "            <td>20190922</td>\n",
+       "            <td>20150627</td>\n",
+       "            <td>4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>ZZ000000000000</td>\n",
+       "            <td>20170504</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS027514000015</td>\n",
+       "            <td>20191010</td>\n",
+       "            <td>20151101</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('CS006214000001', 20181103, '20150201', Decimal('3')),\n",
+       " ('CS008415000097', 20181118, '20150322', Decimal('3')),\n",
+       " ('CS028414000014', 20170712, '20150711', Decimal('2')),\n",
+       " ('ZZ000000000000', 20190205, None, None),\n",
+       " ('CS025415000050', 20180821, '20160131', Decimal('2')),\n",
+       " ('CS003515000195', 20190605, '20150306', Decimal('4')),\n",
+       " ('CS024514000042', 20181205, '20151010', Decimal('3')),\n",
+       " ('CS040415000178', 20190922, '20150627', Decimal('4')),\n",
+       " ('ZZ000000000000', 20170504, None, None),\n",
+       " ('CS027514000015', 20191010, '20151101', Decimal('3'))]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "\n",
+    "WITH receipt_with_spend AS (\n",
+    "    SELECT\n",
+    "        r.customer_id,\n",
+    "        r.sales_ymd,\n",
+    "        c.application_date,\n",
+    "        justify_days(\n",
+    "            TO_TIMESTAMP(CAST(r.sales_ymd AS VARCHAR), 'YYYYMMDD') - TO_TIMESTAMP(c.application_date, 'YYYYMMDD')\n",
+    "        ) AS diff\n",
+    "    FROM receipt AS r\n",
+    "    LEFT OUTER JOIN\n",
+    "        customer AS c\n",
+    "            ON r.customer_id = c.customer_id\n",
+    ")\n",
+    "SELECT\n",
+    "    r.customer_id,\n",
+    "    r.sales_ymd,\n",
+    "    r.application_date,\n",
+    "    EXTRACT(YEAR FROM r.diff) AS years\n",
+    "FROM receipt_with_spend AS r\n",
+    "LIMIT 10;"
    ]
   },
   {
@@ -9107,11 +9349,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "10 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>customer_id</th>\n",
+       "            <th>sales_ymd</th>\n",
+       "            <th>application_date</th>\n",
+       "            <th>extract</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>CS006214000001</td>\n",
+       "            <td>20181103</td>\n",
+       "            <td>20150201</td>\n",
+       "            <td>118454400.000000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS008415000097</td>\n",
+       "            <td>20181118</td>\n",
+       "            <td>20150322</td>\n",
+       "            <td>115516800.000000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS028414000014</td>\n",
+       "            <td>20170712</td>\n",
+       "            <td>20150711</td>\n",
+       "            <td>63244800.000000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>ZZ000000000000</td>\n",
+       "            <td>20190205</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS025415000050</td>\n",
+       "            <td>20180821</td>\n",
+       "            <td>20160131</td>\n",
+       "            <td>80611200.000000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS003515000195</td>\n",
+       "            <td>20190605</td>\n",
+       "            <td>20150306</td>\n",
+       "            <td>134092800.000000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS024514000042</td>\n",
+       "            <td>20181205</td>\n",
+       "            <td>20151010</td>\n",
+       "            <td>99532800.000000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS040415000178</td>\n",
+       "            <td>20190922</td>\n",
+       "            <td>20150627</td>\n",
+       "            <td>133747200.000000</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>ZZ000000000000</td>\n",
+       "            <td>20170504</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS027514000015</td>\n",
+       "            <td>20191010</td>\n",
+       "            <td>20151101</td>\n",
+       "            <td>124329600.000000</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('CS006214000001', 20181103, '20150201', Decimal('118454400.000000')),\n",
+       " ('CS008415000097', 20181118, '20150322', Decimal('115516800.000000')),\n",
+       " ('CS028414000014', 20170712, '20150711', Decimal('63244800.000000')),\n",
+       " ('ZZ000000000000', 20190205, None, None),\n",
+       " ('CS025415000050', 20180821, '20160131', Decimal('80611200.000000')),\n",
+       " ('CS003515000195', 20190605, '20150306', Decimal('134092800.000000')),\n",
+       " ('CS024514000042', 20181205, '20151010', Decimal('99532800.000000')),\n",
+       " ('CS040415000178', 20190922, '20150627', Decimal('133747200.000000')),\n",
+       " ('ZZ000000000000', 20170504, None, None),\n",
+       " ('CS027514000015', 20191010, '20151101', Decimal('124329600.000000'))]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "SELECT\n",
+    "    r.customer_id,\n",
+    "    r.sales_ymd,\n",
+    "    c.application_date,\n",
+    "    EXTRACT(\n",
+    "        EPOCH FROM\n",
+    "            TO_TIMESTAMP(CAST(r.sales_ymd AS VARCHAR), 'YYYYMMDD') - TO_TIMESTAMP(c.application_date, 'YYYYMMDD')\n",
+    "    )\n",
+    "FROM receipt AS r\n",
+    "LEFT OUTER JOIN\n",
+    "    customer AS c\n",
+    "        ON r.customer_id = c.customer_id\n",
+    "LIMIT 10;"
    ]
   },
   {
