--- a/docker/work/preprocess_knock_SQL.ipynb
+++ b/docker/work/preprocess_knock_SQL.ipynb
@@ -10344,10 +10344,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>count</th>\n",
+       "            <th>count_1</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>10030</td>\n",
+       "            <td>10030</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(10030, 10030)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "WITH stats AS (\n",
+    "    SELECT\n",
+    "        ROUND(PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY unit_price DESC)) AS unit_price,\n",
+    "        ROUND(PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY unit_cost DESC))  AS unit_cost\n",
+    "    FROM\n",
+    "        product\n",
+    "),\n",
+    "new_product AS (\n",
+    "    SELECT\n",
+    "        product_cd, category_major_cd, category_medium_cd, category_small_cd,\n",
+    "        COALESCE(product.unit_price, stats.unit_price) AS unit_price,\n",
+    "        COALESCE(product.unit_cost,  stats.unit_cost)  AS unit_cost\n",
+    "    FROM\n",
+    "        product, stats\n",
+    ")\n",
+    "SELECT COUNT(unit_price), COUNT(unit_cost)\n",
+    "FROM new_product"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -10359,11 +10413,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>count</th>\n",
+       "            <th>count_1</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>10030</td>\n",
+       "            <td>10030</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(10030, 10030)]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "WITH stats AS (\n",
+    "    SELECT\n",
+    "        category_small_cd,\n",
+    "        ROUND(PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY unit_price DESC)) AS unit_price,\n",
+    "        ROUND(PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY unit_cost  DESC)) AS unit_cost\n",
+    "    FROM\n",
+    "        product\n",
+    "    GROUP BY category_small_cd\n",
+    "),\n",
+    "new_product AS (\n",
+    "    SELECT\n",
+    "        p.product_cd, p.category_major_cd, p.category_medium_cd, p.category_small_cd,\n",
+    "        COALESCE(p.unit_price, stats.unit_price) AS unit_price,\n",
+    "        COALESCE(p.unit_cost,  stats.unit_cost)  AS unit_cost\n",
+    "    FROM\n",
+    "        product AS p\n",
+    "    LEFT OUTER JOIN\n",
+    "        stats ON p.category_small_cd = stats.category_small_cd\n",
+    ")\n",
+    "SELECT COUNT(unit_price), COUNT(unit_cost)\n",
+    "FROM new_product;\n"
    ]
   },
   {
@@ -10376,11 +10486,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "10 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>customer_id</th>\n",
+       "            <th>?column?</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>CS001311000059</td>\n",
+       "            <td>1.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS004614000122</td>\n",
+       "            <td>1.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS003512000043</td>\n",
+       "            <td>1.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS029212000033</td>\n",
+       "            <td>0.36126526082130966</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS007515000119</td>\n",
+       "            <td>0.3561548134693307</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS034515000123</td>\n",
+       "            <td>0.6707218167072182</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS026414000014</td>\n",
+       "            <td>0.7925348523459751</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS010515000082</td>\n",
+       "            <td>1.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS008513000099</td>\n",
+       "            <td>0.642965204236006</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS007615000070</td>\n",
+       "            <td>0.12638655462184875</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('CS001311000059', 1.0),\n",
+       " ('CS004614000122', 1.0),\n",
+       " ('CS003512000043', 1.0),\n",
+       " ('CS029212000033', 0.36126526082130966),\n",
+       " ('CS007515000119', 0.3561548134693307),\n",
+       " ('CS034515000123', 0.6707218167072182),\n",
+       " ('CS026414000014', 0.7925348523459751),\n",
+       " ('CS010515000082', 1.0),\n",
+       " ('CS008513000099', 0.642965204236006),\n",
+       " ('CS007615000070', 0.12638655462184875)]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "WITH sales_all AS (\n",
+    "    SELECT customer_id, SUM(amount) AS amount\n",
+    "    FROM receipt\n",
+    "    GROUP BY customer_id\n",
+    "),\n",
+    "sales_2019 AS (\n",
+    "    SELECT customer_id, SUM(amount) AS amount\n",
+    "    FROM receipt\n",
+    "    WHERE EXTRACT(year FROM TO_TIMESTAMP(CAST(sales_ymd AS VARCHAR), 'YYYYMMDD')) = 2018\n",
+    "    GROUP BY customer_id\n",
+    ")\n",
+    "SELECT\n",
+    "    s2019.customer_id,\n",
+    "    CAST(s2019.amount AS float) / CAST(sALL.amount AS float)\n",
+    "FROM\n",
+    "    sales_2019 AS s2019\n",
+    "LEFT OUTER JOIN\n",
+    "    sales_all AS sALL ON s2019.customer_id = sALL.customer_id\n",
+    "WHERE\n",
+    "    CAST(s2019.amount AS float) / CAST(sALL.amount AS float) > 0\n",
+    "LIMIT 10;"
    ]
   },
   {
@@ -10397,7 +10608,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "SELECT c.*, AVG(latitude) AS latitude, AVG(longitude) AS longitude\n",
+    "FROM\n",
+    "    customer AS c\n",
+    "CROSS JOIN\n",
+    "    geocode AS g\n",
+    "WHERE\n",
+    "    c.postal_cd = g.postal_cd\n",
+    "GROUP BY\n",
+    "    customer_id\n",
+    "LIMIT 10;"
    ]
   },
   {
